Fix month input styles on mobile devices

--- a/src/styles/Form.css
+++ b/src/styles/Form.css
@@ -27,3 +27,9 @@ form .button-list {
 form select {
   width: 100%;
 }
+
+form input[type="month"] {
+  width: 100%;
+  box-sizing: border-box;
+  background-color: white;
+}
